Implement abstract list